<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etv_situation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_marginTop="2dp"
            android:layout_marginRight="@dimen/linear_layout_margin_Right"
            android:background="@color/MainBackground_Color"
            android:hint="@string/Situation_Name"
            android:paddingLeft="@dimen/situation_name_padding_left"
            android:paddingTop="@dimen/situation_padding_top"
            android:shadowColor="@color/MainBackground_Color"
            android:textAlignment="center"
            android:textColor="@color/Text_color"
            android:textSize="@dimen/etv_situation_name_textsize"></EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:layout_marginRight="@dimen/linear_layout_margin_Right"
            android:background="@color/MainBackground_Color"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/first_page_drawable_width"
                    android:layout_height="@dimen/first_page_drawable_width"
                    android:layout_marginLeft="@dimen/imageview_margin_left"
                    android:layout_marginTop="@dimen/imageview_margin_top"
                    android:src="@drawable/headphone"></ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/textview_padding_left"
                    android:text="@string/headphone_state"
                    android:textColor="@color/Text_color"
                    android:textSize="@dimen/textview_text_size"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_headphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/chose_state_padding_left"
                android:text="@string/Chose_State"
                android:textColor="@color/miniText_color"
                android:textSize="@dimen/chose_state_textview_text_size"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:layout_marginRight="@dimen/linear_layout_margin_Right"
            android:background="@color/MainBackground_Color"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/first_page_drawable_width"
                    android:layout_height="@dimen/first_page_drawable_width"
                    android:layout_marginLeft="@dimen/imageview_margin_left"
                    android:layout_marginTop="@dimen/imageview_margin_top"
                    android:src="@drawable/weather"></ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/textview_padding_left"
                    android:text="@string/Weather_State"
                    android:textColor="@color/Text_color"
                    android:textSize="@dimen/textview_text_size"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_WeatherState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/chose_state_padding_left"
                android:text="@string/Chose_State"
                android:textColor="@color/miniText_color"
                android:textSize="@dimen/chose_state_textview_text_size"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:layout_marginRight="@dimen/linear_layout_margin_Right"
            android:background="@color/MainBackground_Color"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/first_page_drawable_width"
                    android:layout_height="@dimen/first_page_drawable_width"
                    android:layout_marginLeft="@dimen/imageview_margin_left"
                    android:layout_marginTop="@dimen/imageview_margin_top"
                    android:src="@drawable/location"></ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/textview_padding_left"
                    android:text="@string/Location_state"
                    android:textColor="@color/Text_color"
                    android:textSize="@dimen/textview_text_size"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_LocationState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/chose_state_padding_left"
                android:text="@string/Chose_State"
                android:textColor="#e6e600"
                android:textSize="@dimen/chose_state_textview_text_size"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:layout_marginRight="@dimen/linear_layout_margin_Right"
            android:background="@color/MainBackground_Color"
            android:orientation="vertical">>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/first_page_drawable_width"
                    android:layout_height="@dimen/first_page_drawable_width"
                    android:layout_marginLeft="@dimen/imageview_margin_left"
                    android:layout_marginTop="@dimen/imageview_margin_top"
                    android:src="@drawable/physicalstate">></ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/textview_padding_left"
                    android:paddingRight="10dp"
                    android:text="@string/PhysicalActivity_State"
                    android:textColor="@color/Text_color"
                    android:textSize="@dimen/textview_text_size"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_PhysicalActivityState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/chose_state_padding_left"
                android:text="@string/Chose_State"
                android:textColor="@color/miniText_color"
                android:textSize="@dimen/chose_state_textview_text_size"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:layout_marginRight="@dimen/linear_layout_margin_Right"
            android:background="@color/MainBackground_Color"
            android:orientation="vertical">>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/first_page_drawable_width"
                    android:layout_height="@dimen/first_page_drawable_width"
                    android:layout_marginLeft="@dimen/imageview_margin_left"
                    android:layout_marginTop="@dimen/imageview_margin_top"
                    android:src="@drawable/calendern">></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/textview_padding_left"
                    android:text="@string/Time_state"
                    android:textColor="@color/Text_color"
                    android:textSize="@dimen/textview_text_size"></TextView>
                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/button_rounded"
                    android:text="DATE">></Button>
                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/button_rounded"
                    android:text="Time"
                    ></Button>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_Acction"
            android:layout_width="@dimen/mainactivity_button_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@drawable/button_rounded"
            android:paddingTop="@dimen/button_padding_top"
            android:text="@string/Select_Action"
            android:textSize="@dimen/button_text_size">
        </Button>
        <Button
            android:id="@+id/btn_addSituation"
            android:layout_width="@dimen/mainactivity_button_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@drawable/button_rounded"
            android:paddingTop="@dimen/button_padding_top"
            android:text="ADD SITUATION"
            android:textSize="@dimen/button_text_size">
            ></Button>
        <Button
            android:id="@+id/btn_showSituations"
            android:layout_width="@dimen/mainactivity_button_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_rounded"
            android:paddingTop="@dimen/button_padding_top"
            android:text="SHOW SITUATIONS"
            android:textSize="@dimen/button_text_size">
            >
        </Button>
    </LinearLayout>
</ScrollView>
